--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css" />
+    <base href="/" />
   </head>
   <body>
     <app-root></app-root>
